@@ -1,5 +1,8 @@
 package com.example.genesisclub.genesisClub.seguridad;
 
+import com.example.genesisclub.genesisClub.Repositorio.UsuarioRepository;
+import com.example.genesisclub.genesisClub.Servicio.JWTUtilityService;
+import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
@@ -15,10 +18,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import com.example.genesisclub.genesisClub.Repositorio.UsuarioRepository;
-import com.example.genesisclub.genesisClub.Servicio.JWTUtilityService;
-
-import jakarta.servlet.http.HttpServletResponse;
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -29,9 +29,7 @@ public class SecurityConfig {
     private final JWTUtilityService jwtUtilityService;
     private final UsuarioRepository usuarioRepository;
 
-    public SecurityConfig(
-            JWTUtilityService jwtUtilityService,
-            UsuarioRepository usuarioRepository) {
+    public SecurityConfig(JWTUtilityService jwtUtilityService, UsuarioRepository usuarioRepository) {
         this.jwtUtilityService = jwtUtilityService;
         this.usuarioRepository = usuarioRepository;
     }
@@ -43,87 +41,68 @@ public class SecurityConfig {
 
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
-
         http
-            // 1. CORS: Debe configurarse explícitamente aquí
+            // 1. CORS: Configuración explícita para producción
             .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-
-            // 2. Desactivar CSRF para APIs REST
+            
+            // 2. CSRF: Deshabilitado para APIs REST
             .csrf(csrf -> csrf.disable())
 
-            // 3. Manejo de sesión sin estado (JWT)
-            .sessionManagement(session ->
-                    session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)
+            // 3. Estado: Sin sesión (JWT puro)
+            .sessionManagement(session -> 
+                session.sessionCreationPolicy(SessionCreationPolicy.STATELESS)
             )
 
-            // 4. Autorización de rutas
+            // 4. RUTAS: Configuración de permisos
             .authorizeHttpRequests(auth -> auth
-                // Permitir todas las opciones (Preflight)
+                // Permitir siempre el Preflight (OPTIONS)
                 .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
 
-                // Rutas públicas
-                .requestMatchers(
-                        "/api/auth/**",
-                        "/api/usuario/registro",
-                        "/api/solicitud/nuevo",
-                        "/email/**",
-                        "/api/invitacion/aceptar/**"
-                ).permitAll()
-
-                // Rutas de ADMIN
-                .requestMatchers("/api/solicitud/pendientes/**").hasRole("ADMIN")
-                .requestMatchers("/api/solicitud/actualizar/**").hasRole("ADMIN")
+                // RUTAS PÚBLICAS (Exactas, sin asteriscos conflictivos)
+                .requestMatchers("/api/auth/login").permitAll()
+                .requestMatchers("/api/auth/registro").permitAll()
+                .requestMatchers("/api/usuario/registro").permitAll()
+                .requestMatchers("/api/solicitud/nuevo").permitAll()
+                .requestMatchers("/api/solicitud/nuevo/").permitAll()
+                .requestMatchers("/email/enviar").permitAll()
+                
+                // RUTAS DE ADMIN (Asegúrate de que el usuario tenga ROLE_ADMIN en DB)
+                .requestMatchers("/api/solicitud/pendientes").hasRole("ADMIN")
+                .requestMatchers("/api/solicitud/actualizar").hasRole("ADMIN")
                 .requestMatchers("/api/socio/**").hasRole("ADMIN")
 
-                // Rutas para usuarios logueados
-                .requestMatchers("/api/invitacion/**").authenticated()
-
-                // Cualquier otra ruta requiere autenticación
+                // Todo lo demás requiere estar logueado
                 .anyRequest().authenticated()
             )
 
-            // 5. Filtro JWT antes del de usuario/password
-            .addFilterBefore(
-                    jwtAuthorizationFilter(),
-                    UsernamePasswordAuthenticationFilter.class
-            )
+            // 5. FILTROS: JWT antes que el de usuario/password
+            .addFilterBefore(jwtAuthorizationFilter(), UsernamePasswordAuthenticationFilter.class)
 
-            // 6. Manejo de errores de autenticación
-            .exceptionHandling(ex ->
-                    ex.authenticationEntryPoint((req, res, e) ->
-                            res.sendError(HttpServletResponse.SC_UNAUTHORIZED, "No autorizado")
-                    )
+            // 6. MANEJO DE ERRORES: Si algo falla, devuelve 401 limpio
+            .exceptionHandling(ex -> ex
+                .authenticationEntryPoint((request, response, authException) -> {
+                    response.sendError(HttpServletResponse.SC_UNAUTHORIZED, "No autorizado");
+                })
             );
 
         return http.build();
     }
 
-    // =========================================================
-    // 🔥 CONFIGURACIÓN CORS INTEGRADA
-    // =========================================================
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
         
-        // Orígenes permitidos
+        // Orígenes permitidos (Local + Render)
         config.setAllowedOrigins(List.of(
-                "http://localhost:4200",
-                "https://genesisclub-frontend.onrender.com"
+            "http://localhost:4200", 
+            "https://genesisclub-frontend.onrender.com"
         ));
         
-        // Métodos permitidos
-        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
-        
-        // Headers permitidos
-        config.setAllowedHeaders(List.of("Authorization", "Content-Type", "X-Requested-With", "Accept", "Origin", "Access-Control-Request-Method", "Access-Control-Request-Headers"));
-        
-        // Headers expuestos (necesario para que el front vea el Token si lo mandas en el header)
+        // Métodos y Headers
+        config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+        config.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "Accept", "X-Requested-With"));
         config.setExposedHeaders(List.of("Authorization"));
-        
-        // Permitir envío de credenciales/cookies
         config.setAllowCredentials(true);
-        
-        // Tiempo de caché para el preflight (opcional, ayuda al rendimiento)
         config.setMaxAge(3600L);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
